# routes/genres/index.js
@@ -1,0 +1,4 @@
+import { getListMoviesByGenre } from './get.js'
+import { createGenre } from './post.js'
+
+export { createGenre, getListMoviesByGenre }
